<resources>
    <string name="app_name">FirstPhone</string>
    <string name="welcome">Welcome to my first Android App</string>
    <string name="name">Luther Dean Sambeli</string>
    <string name="proceed">Proceed</string>
    <string name="login_username">Username</string>
    <string name="login_btn_signup">Signup</string>
    <string name="login_btn_login">Login</string>
    <string name="login_password">Password</string>
    <string name="app_btn_cancel">CANCEL</string>
    <string name="app_confirm_pass">Confirm Password</string>
    <string name="app_email">Email</string>
    <string name="app_first_name">First Name</string>
    <string name="app_middle_name">Middle Name</string>
    <string name="app_last_name">Last Name</string>
    <string name="app_save">SAVE</string>
    <string name="app_back">BACK</string>
</resources>